--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
         "start": "next start",
         "prisma:generate": "prisma generate",
         "db:push": "prisma db push",
-        "db:seed": "prisma db seed"
+        "db:seed": "prisma db seed",
+        "db:migrate": "prisma migrate dev",
+        "db:makemigration": "tsx scripts/migrate.ts",
+        "db:migrate:reset": "prisma migrate reset",
+        "db:studio": "prisma studio"
     },
     "dependencies": {
         "@prisma/client": "^6.19.1",
